--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,14 +6,14 @@
 #    By: alhervas <alhervas@student.42madrid.com>   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/28 17:46:33 by alhervas          #+#    #+#              #
-#    Updated: 2023/02/04 12:46:13 by alhervas         ###   ########.fr        #
+#    Updated: 2023/02/05 22:07:58 by alhervas         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRC= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c \
 ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_toupper.c \
 ft_tolower.c ft_strchr.c ft_strlcat.c ft_strrchr.c ft_strncmp.c ft_memchr.c \
-ft_memcmp.c ft_strnstr.c ft_atoi.c
+ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c
 
 NAME = libft.a
 
